--- a/.semaphore/semaphore.yml
+++ b/.semaphore/semaphore.yml
@@ -31,14 +31,15 @@ blocks:
         commands:
           - sem-version go 1.19
           - sem-service start postgres 15
+          - sudo apt-get update
+          - sudo apt-get -y install gotestsum
           - checkout
           - 'cache restore '
           - go mod vendor
-          - 'ls -lsR ${HOME}'
       jobs:
         - name: go test
           commands:
-            - '${HOME}/go/bin/gotestsum --junitfile junit.xml ./...'
+            - gotestsum --junitfile junit.xml ./...
       epilogue:
         always:
           commands:
