--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -21,7 +21,7 @@ jobs:
         image: postgres
         # Provide the password for postgres
         env:
-          POSTGRES_PASSWORD: postgres
+          POSTGRES_PASSWORD: In!ferno666
         # Set health checks to wait until postgres has started
         options: >-
           --health-cmd pg_isready
@@ -45,3 +45,5 @@ jobs:
 
       - name: Test
         run: go test -v ./...
+        env:
+          DATABASE_DSN: "user=postgres host=localhost password=postgres port=5432 database=postgres sslmode=disable"
