Added Postgres Service to Test Container.

--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -55,6 +55,28 @@ jobs:
   test_container_build:
     runs-on: ubuntu-latest
     name: Test Go API
+
+    # Service containers to run with `container-job`
+    services:
+      # Label used to access the service container
+      postgres:
+        # Docker Hub image
+        image: postgres
+        # Provide the password for postgres
+        env:
+          # POSTGRES_DB: postgres
+          # POSTGRES_USER: postgres
+          POSTGRES_PASSWORD: postgres
+        # Set health checks to wait until postgres has started
+        options: >-
+          --health-cmd pg_isready
+          --health-interval 10s
+          --health-timeout 5s
+          --health-retries 5
+        ports:
+          # Maps tcp port 5432 on service container to the host
+          - 5432:5432
+
     steps:
       # Check out the repository to use action
       - name: Checkout
@@ -64,6 +86,6 @@ jobs:
         id: container
         with:
           who-to-greet: "Gary MacDonald"
-      # Use the output from the `hello` step
-      - name: Gary Step output
+      # Use the output from the `container` step
+      - name: Container Build Output
         run: echo "The time was ${{ steps.container.outputs.time }}"
