Added Postgres Password to Test Container.

--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -48,6 +48,8 @@ jobs:
         id: container
         with:
           who-to-greet: "Gary MacDonald"
+        env:
+          PGPASSWORD: postgres
 
       # Use the output from the `container` step
       - name: Container Build Output
