--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -49,6 +49,7 @@ jobs:
         with:
           who-to-greet: "Gary MacDonald"
         env:
+          POSTGRES_HOST: localhost
           PGPASSWORD: postgres
 
       # Use the output from the `container` step
