--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -49,7 +49,8 @@ jobs:
         with:
           who-to-greet: "Gary MacDonald"
         env:
-          POSTGRES_HOST: localhost
+          PGHOST: 0.0.0.0
+          PGUSER: postgres
           PGPASSWORD: postgres
 
       - name: Upload Build Artifacts
