--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -34,19 +34,19 @@ jobs:
       - uses: actions/checkout@v4
 
       - name: Set up Go
-        uses: actions/setup-go@v4
+        uses: actions/setup-go@v4.2.0
         with:
           go-version: "1.21"
 
       - name: Build
         run: go build -v ./...
 
-      - name: Test
+      - name: Local Test
         run: go test -v ./...
         env:
           PGPASSWORD: postgres
 
-      - name: Test Go Module Container
+      - name: Container Test
         uses: ./.github/actions # Uses an action in the .github actions directory
         id: container
         with:
