--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -58,7 +58,7 @@ jobs:
       - name: Upload Build Artifacts
         uses: actions/upload-artifact@v4
         with:
-          name: workspace_artifacts
+          name: Container-{{ github.run_id }}
           path: ${{ github.workspace }}
 
       # Use the output from the `container` step
