--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -38,6 +38,23 @@ jobs:
     steps:
       - uses: actions/checkout@v4
 
+      - name: Login to GCP
+        uses: "google-github-actions/auth@v2"
+        with:
+          service_account: ${{ env.SERVICE_NAME}}
+          credentials_json: ${{ secrets.GLOUD_SERVICE_KEY }}
+          project_id: ${{ env.PROJECT_ID }}
+          export_default_credentials: true
+
+      - name: Configure GCloud
+        env:
+          PROJECT_ID: ${{ env.PROJECT_ID }}
+        uses: google-github-actions/setup-gcloud@v0.3.0
+        with:
+          service_account_key: ${{ secrets.GLOUD_SERVICE_KEY }}
+          project_id: ${{ env.PROJECT_ID }}
+          export_default_credentials: true
+
       - name: Set up Go
         uses: actions/setup-go@v5
         with:
@@ -59,22 +76,6 @@ jobs:
         env:
           PGUSER: postgres
           PGPASSWORD: postgres
-
-      - name: Login to GCP
-        uses: "google-github-actions/auth@v2"
-        with:
-          service_account_key: ${{ secrets.SERVICE_ACCOUNT_KEY }}
-          project_id: ${{ env.PROJECT_ID }}
-          export_default_credentials: true
-
-      - name: Configure GCloud
-        env:
-          PROJECT_ID: ${{ env.PROJECT_ID }}
-        uses: google-github-actions/setup-gcloud@v0.3.0
-        with:
-          service_account_key: ${{ secrets.SERVICE_ACCOUNT_KEY }} #parse the value of repository secret called SERVICE_ACCOUNT_KEY that we have created earlier
-          project_id: ${{ env.PROJECT_ID }} #parse the value of env called PROJECT_ID
-          export_default_credentials: true
 
       - name: Configure Docker Client
         run: |-
