--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -41,9 +41,7 @@ jobs:
       - name: Login to GCP
         uses: "google-github-actions/auth@v2"
         with:
-          service_account: ${{ env.SERVICE_NAME}}
-          credentials_json: ${{ secrets.GLOUD_SERVICE_KEY }}
-          project_id: ${{ env.PROJECT_ID }}
+          credentials_json: '${{ secrets.GLOUD_SERVICE_KEY }}''
 
       - name: Configure GCloud
         env:
