--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -79,12 +79,10 @@ jobs:
 
       # tag docker image to gcr image format then push to gcr
       - name: Push Docker Image to GCR
-        env:
-          CONTAINER_NAME: ${{ CONTAINER_NAME }}
         run: |-
           env | sort
-          docker tag $CONTAINER_NAME:${{ github.run_number }} ${{ env.REGISTRY }}/${{ env.PROJECT_ID }}/$CONTAINER_NAME:${{ github.run_number }} 
-          docker push ${{ env.REGISTRY }}/${{ env.PROJECT_ID }}/$CONTAINER_NAME:${{ github.run_number }}
+          docker tag ${{ env.CONTAINER_NAME }}:${{ github.run_number }} ${{ env.REGISTRY }}/${{ env.PROJECT_ID }}/${{ env.CONTAINER_NAME }}:${{ github.run_number }} 
+          docker push ${{ env.REGISTRY }}/${{ env.PROJECT_ID }}/${{ env.CONTAINER_NAME }}:${{ github.run_number }}
 
       - name: Upload Build Artifacts
         uses: actions/upload-artifact@v4
