--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -81,8 +81,8 @@ jobs:
       - name: Push Docker Image to GCR
         run: |-
           env | sort
-          docker tag ${{ env.CONTAINER_NAME }}:${{ github.run_number }} ${{ env.REGISTRY }}/${{ env.PROJECT_ID }}/${{ env.CONTAINER_NAME }}:${{ github.run_number }} 
-          docker push ${{ env.REGISTRY }}/${{ env.PROJECT_ID }}/${{ env.CONTAINER_NAME }}:${{ github.run_number }}
+          docker tag ${{ vars.CONTAINER_NAME }}:${{ github.run_number }} ${{ vars.REGISTRY }}/${{ vars.PROJECT_ID }}/${{ vars.CONTAINER_NAME }}:${{ github.run_number }} 
+          docker push ${{ vars.REGISTRY }}/${{ vars.PROJECT_ID }}/${{ vars.CONTAINER_NAME }}:${{ github.run_number }}
 
       - name: Upload Build Artifacts
         uses: actions/upload-artifact@v4
