--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -38,7 +38,7 @@ jobs:
     steps:
       - uses: actions/checkout@v4
 
-      - name: Login to GCP
+      - id: "auth"
         uses: "google-github-actions/auth@v2"
         with:
           credentials_json: "${{ secrets.GCLOUD_SERVICE_KEY }}"
@@ -46,7 +46,7 @@ jobs:
       - name: Configure GCloud
         env:
           PROJECT_ID: ${{ env.PROJECT_ID }}
-        uses: google-github-actions/setup-gcloud@v0.3.0
+        uses: google-github-actions/setup-gcloud@v2
         with:
           service_account_key: ${{ secrets.GCLOUD_SERVICE_KEY }}
           project_id: ${{ env.PROJECT_ID }}
@@ -80,6 +80,8 @@ jobs:
       - name: Configure Docker Client
         run: |-
           gcloud auth configure-docker # --quiet
+
+      # gcloud auth configure-docker europe-west2-docker.pkg.dev # --quiet
 
       # tag docker image to gcr image format then push to gcr
       - name: Push Docker Image to GCR
