GCR Login Artifactory

--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -86,6 +86,7 @@ jobs:
       - name: Push Docker Image to GCR
         run: |-
           docker image ls
+          gcloud auth login
           docker push ${{ vars.REPOSITORY }}/${{ vars.PROJECT_ID }}/${{ vars.IMAGE_NAME }}:${{ github.run_number }}
 
       - name: Upload Build Artifacts
