--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -50,6 +50,10 @@ jobs:
         with:
           service_account_key: ${{ secrets.GCLOUD_SERVICE_KEY }}
           project_id: ${{ env.PROJECT_ID }}
+          version: ">= 363.0.0"
+
+      - name: "Check GCloud CLI"
+        run: "gcloud info"
 
       - name: Set up Go
         uses: actions/setup-go@v5
