--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -92,7 +92,7 @@ jobs:
           gcloud version
           docker image ls | head -2 | tail -1
           gcloud auth print-access-token | docker login -u oauth2accesstoken --password-stdin ${{ vars.REPOSITORY }}
-          docker push ${{ vars.REPOSITORY }}/${{ vars.PROJECT_ID }}/${{ vars.IMAGE_NAME }}:${{ github.run_number }}
+          docker push ${{ vars.REPOSITORY }}/${{ vars.IMAGE_NAME }}:${{ github.run_number }}
 
       - name: Upload Build Artifacts
         uses: actions/upload-artifact@v4
