Testing and Running Modes

--- a/.github/actions/action.yml
+++ b/.github/actions/action.yml
@@ -6,7 +6,10 @@ inputs:
     description: "Who to greet"
     required: true
     default: "World"
-
+  mode:
+    description: "Which Mode"
+    required: true
+    default: "test"
 outputs:
   time: # id of output
     description: "The time we greeted you"
@@ -15,3 +18,4 @@ runs:
   image: "../../Dockerfile"
   args:
     - ${{ inputs.who-to-greet }}
+    - ${{ inputs.mode }}
