--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -74,10 +74,16 @@ jobs:
         env:
           PGPASSWORD: postgres
 
+      # Setup Env for Container and Release
+      - name: "Set Environment"
+        run: |-
+          echo "GCR_NAME=${{ vars.REPOSITORY }}/${{ vars.IMAGE_NAME }}:${{ github.run_number }}" >> ${GITHUB_ENV}
+          echo "RELEASE_NAME=${{ vars.IMAGE_NAME }}-${GITHUB_SHA::7}-${GITHUB_RUN_NUMBER}" >> ${GITHUB_ENV}
+
       # Build and Tag Container for GCR
       - name: Container Build
         run: |
-          docker build -t ${{ vars.REPOSITORY }}/${{ vars.IMAGE_NAME }}:${{ github.run_number }} .
+          docker build -t ${{ env.GCR_NAME }} .
 
       - name: Container Test
         uses: ./.github/actions
@@ -89,7 +95,7 @@ jobs:
           PGUSER: postgres
           PGPASSWORD: postgres
 
-      # Configure /home/runner/.docker/config.json - Deprecate
+      # Configure /home/runner/.docker/config.json - Deprecate?
       - name: Configure Docker Client
         run: |-
           gcloud auth configure-docker # --quiet
@@ -101,7 +107,18 @@ jobs:
           docker image ls | head -2 | tail -1
           gcloud version
           gcloud auth print-access-token | docker login -u oauth2accesstoken --password-stdin ${{ vars.REPOSITORY }}
-          docker push ${{ vars.REPOSITORY }}/${{ vars.IMAGE_NAME }}:${{ github.run_number }}
+          docker push ${{ env.GCR_NAME }}
+
+      # Create a Release
+      - name: "Create Cloud Deploy Release"
+        uses: "google-github-actions/create-cloud-deploy-release@v0"
+        with:
+          delivery_pipeline: ${{ vars.IMAGE_NAME }}
+          name: "${{ env.RELEASE_NAME }}"
+          region: "${{ env.REGION }}"
+          description: "${{ env.GITHUB_COMMIT_MSG }}"
+          skaffold_file: "config/skaffold.yaml"
+          images: "app=${{ env.GCR_NAME }}"
 
       # Upload Build Artifacts to Github - Deprecate
       - name: Upload Build Artifacts
