--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -79,6 +79,7 @@ jobs:
         run: |-
           echo "GCR_NAME=${{ vars.REPOSITORY }}/${{ vars.IMAGE_NAME }}:${{ github.run_number }}" >> ${GITHUB_ENV}
           echo "RELEASE_NAME=${{ vars.IMAGE_NAME }}-${GITHUB_SHA::7}-${GITHUB_RUN_NUMBER}" >> ${GITHUB_ENV}
+          echo "REGION=${{ env.REGION }}" >> ${GITHUB_ENV}
 
       # Build and Tag Container for GCR
       - name: Container Build
@@ -114,8 +115,8 @@ jobs:
         uses: "google-github-actions/create-cloud-deploy-release@v0"
         with:
           delivery_pipeline: ${{ vars.IMAGE_NAME }}
-          name: "${{ env.RELEASE_NAME }}"
-          region: "${{ env.REGION }}"
+          name: "${{ vars.RELEASE_NAME }}"
+          region: "${{ vars.REGION }}"
           description: "${{ env.GITHUB_COMMIT_MSG }}"
           skaffold_file: "config/skaffold.yaml"
           images: "app=${{ env.GCR_NAME }}"
