--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -116,7 +116,7 @@ jobs:
         with:
           delivery_pipeline: ${{ vars.IMAGE_NAME }}
           name: "${{ env.RELEASE_NAME }}"
-          region: "${{ env.REGION }}"
+          region: "${{ vars.REGION }}"
           description: "${{ env.GITHUB_COMMIT_MSG }}"
           skaffold_file: "config/skaffold.yaml"
           images: "app=${{ env.GCR_NAME }}"
