--- a/skaffold.yaml
+++ b/skaffold.yaml
@@ -1,4 +1,38 @@
-apiVersion: skaffold/v3
+apiVersion: v1
+kind: Service
+metadata:
+  name: dockerfile-image
+  labels:
+    app: dockerfile-image
+spec:
+  ports:
+    - port: 8100
+      protocol: TCP
+  clusterIP: None
+  selector:
+    app: dockerfile-image
+---
+apiVersion: apps/v1
+kind: Deployment
+metadata:
+  name: dockerfile-image
+  labels:
+    app: dockerfile-image
+spec:
+  replicas: 1
+  selector:
+    matchLabels:
+      app: dockerfile-image
+  template:
+    metadata:
+      labels:
+        app: dockerfile-image
+    spec:
+      containers:
+        - name: dockerfile-image
+          image: dockerfile-image
+---
+apiVersion: skaffold/v4beta10
 kind: Config
 metadata:
   name: api-semaphore
