--- a/.env
+++ b/.env
@@ -4,9 +4,9 @@ APP_DB_USERNAME=postgres
 APP_DB_PASSWORD=In!ferno666
 APP_DB_NAME=postgres
 
-
-INSTANCE_UNIX_SOCKET=/cloudsql/414115:europe-west2:api-postgres
-INSTANCE_CONNECTION_NAME=gmcd-414115:europe-west2:api-postgres
-DB_NAME=api-postgres
-DB_USER=api-user
-DB_PASS=In!ferno666
+# Cloud SQL Parameters - duplicated in deploy.sh for now
+INSTANCE_UNIX_SOCKET=/cloudsql/414115:europe-west2:golang-psql
+INSTANCE_CONNECTION_NAME=gmcd-414115:europe-west2:golang-psql
+DB_NAME=golang-db
+DB_USER=golang-user
+DB_PASS=Noddy.Pass
