--- a/.env
+++ b/.env
@@ -1,12 +1,14 @@
 SEMAPHORECI_API_TAKEN=duWE4Hs9EV4a9y9xeoha
 
-APP_DB_USERNAME=postgres
-APP_DB_PASSWORD=In!ferno666
-APP_DB_NAME=postgres
+## For local dev
+# APP_DB_HOST=0.0.0.0
+# APP_DB_NAME=postgres
+# APP_DB_USERNAME=postgres
+# APP_DB_PASSWORD=In!ferno666
 
 # Cloud SQL Parameters - duplicated in deploy.sh for now
-INSTANCE_UNIX_SOCKET=/cloudsql/414115:europe-west2:golang-psql
-INSTANCE_CONNECTION_NAME=gmcd-414115:europe-west2:golang-psql
-DB_NAME=golang-db
-DB_USER=golang-user
-DB_PASS=Noddy.Pass
+APP_DB_HOST=/cloudsql/414115:europe-west2:golang-psql
+# INSTANCE_CONNECTION_NAME=gmcd-414115:europe-west2:golang-psql
+APP_DB_NAME=golang-db
+APP_DB_USERNAME=golang-user
+APP_DB_PASSWORD=Noddy.Pass
