--- a/.env
+++ b/.env
@@ -7,8 +7,9 @@ SEMAPHORECI_API_TAKEN=duWE4Hs9EV4a9y9xeoha
 # APP_DB_PASSWORD=In!ferno666
 
 # Cloud SQL Parameters - duplicated in deploy.sh for now
-APP_DB_HOST=/cloudsql/414115:europe-west2:golang-psql
+# APP_DB_HOST=/cloudsql/414115:europe-west2:golang-psql
 # INSTANCE_CONNECTION_NAME=gmcd-414115:europe-west2:golang-psql
+APP_DB_HOST=35.242.149.106
 APP_DB_NAME=golang-db
 APP_DB_USERNAME=golang-user
 APP_DB_PASSWORD=Noddy.Pass
