--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -44,12 +44,12 @@ jobs:
         with:
           credentials_json: "${{ secrets.GCLOUD_SERVICE_KEY }}"
 
-      # Start GCloud SQL Proxy, and test. Note, APP_DB_HOST is in effect localhost here, as we are running the proxy to instance ${{ env.PROJECT_ID }}:${{ vars.REGION }}:${{ vars.CLOUD_SQL_INSTANCE }}
+      # Start GCloud SQL Proxy, and test. Note, APP_DB_HOST is in effect localhost:5433 here, as we are running the proxy to instance ${{ env.PROJECT_ID }}:${{ vars.REGION }}:${{ vars.CLOUD_SQL_INSTANCE }}
       - name: Google Cloud SQL Proxy
         run: |-
-          docker run -d --net host --name gce-cloudsql-proxy --restart on-failure --expose 5432 gcr.io/cloud-sql-connectors/cloud-sql-proxy:2.7.0 --run-connection-test -t ${{steps.auth.outputs.access_token}} ${{ env.PROJECT_ID }}:${{ vars.REGION }}:${{ vars.CLOUD_SQL_INSTANCE }}
+          docker run -d --net host --name gce-cloudsql-proxy --restart on-failure --expose 5433 gcr.io/cloud-sql-connectors/cloud-sql-proxy:2.7.0 --run-connection-test -t ${{steps.auth.outputs.access_token}} ${{ env.PROJECT_ID }}:${{ vars.REGION }}:${{ vars.CLOUD_SQL_INSTANCE }}
           docker ps
-          PGPASSWORD=Noddy.Pass psql "host=localhost dbname=${{ vars.APP_DB_NAME }} user=${{ vars.APP_DB_USERNAME }} sslmode=disable" -c 'select current_database()'
+          PGPASSWORD=${{ secrets.APP_DB_PASSWORD }} psql "host=localhost port=5433 dbname=${{ vars.APP_DB_NAME }} user=${{ vars.APP_DB_USERNAME }} sslmode=disable" -c 'select current_database()'
 
       # Setup GCloud
       - name: Configure GCloud
