--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -35,6 +35,11 @@ jobs:
     #     ports:
     #       - 5432:5432
 
+    #     cloudsql-proxy:
+    #       iamge: gcr.io/cloud-sql-connectors/cloud-sql-proxy:2.7.0
+    # docker run -d --net host --name gce-cloudsql-proxy --restart on-failure
+    # --expose 5432  --run-connection-test -t ${{steps.auth.outputs.access_token}} ${{ vars.PROJECT_ID }}:${{ vars.REGION }}:${{ vars.CLOUD_SQL_INSTANCE }}
+
     steps:
       - uses: actions/checkout@v4
 
@@ -44,11 +49,12 @@ jobs:
         with:
           credentials_json: "${{ secrets.GCLOUD_SERVICE_KEY }}"
 
-      # Start GCloud SQL Proxy, and test. Note, APP_DB_HOST is in effect localhost:5433 here, as we are running the proxy to instance ${{ env.PROJECT_ID }}:${{ vars.REGION }}:${{ vars.CLOUD_SQL_INSTANCE }}
+      # Start GCloud SQL Proxy, and test. Note, APP_DB_HOST is in effect localhost:5432 here, as we are running the proxy to instance ${{ env.PROJECT_ID }}:${{ vars.REGION }}:${{ vars.CLOUD_SQL_INSTANCE }}
       - name: Google Cloud SQL Proxy
         run: |-
           docker run -d --net host --name gce-cloudsql-proxy --restart on-failure --expose 5432 gcr.io/cloud-sql-connectors/cloud-sql-proxy:2.7.0 --run-connection-test -t ${{steps.auth.outputs.access_token}} ${{ vars.PROJECT_ID }}:${{ vars.REGION }}:${{ vars.CLOUD_SQL_INSTANCE }}
           docker ps
+          sleep 5
           PGPASSWORD=${{ secrets.APP_DB_PASSWORD }} psql "host=localhost port=5432 dbname=${{ vars.APP_DB_NAME }} user=${{ vars.APP_DB_USERNAME }} sslmode=disable" -c 'select current_database()'
 
       # Setup GCloud
