--- a/.github/workflows/sql-proxy.yml
+++ b/.github/workflows/sql-proxy.yml
@@ -1,3 +1,9 @@
+name: SQL Proxy
+
+on:
+  push:
+    branches: ["sql-proxy"]
+
 jobs:
   database-migrations:
     runs-on: ubuntu-latest
@@ -25,7 +31,7 @@ jobs:
 
       - name: Google Cloud SQL Proxy
         run: |-
-          docker run -d --net host --name gce-cloudsql-proxy --restart on-failure --expose 5432 gcr.io/cloud-sql-connectors/cloud-sql-proxy:2.7.0 --run-connection-test -t ${{steps.auth.outputs.access_token}} project:europe-west1:database
+          docker run -d --net host --name gce-cloudsql-proxy --restart on-failure --expose 5432 gcr.io/cloud-sql-connectors/cloud-sql-proxy:2.11.0 --run-connection-test -t ${{steps.auth.outputs.access_token}} project:europe-west1:database
 
       - name: Install DBmate
         run: |-
