--- a/.github/workflows/sql-proxy.yml
+++ b/.github/workflows/sql-proxy.yml
@@ -10,14 +10,14 @@ jobs:
     steps:
       - uses: actions/checkout@v4
         with:
-          token: ${{ secrets.token }} // this is used to allow checkout to pull private repos
+          token: ${{ secrets.GH_TOKEN }} // this is used to allow checkout to pull private repos
 
       - name: Apply netrc creds with direct input
         uses: little-core-labs/netrc-creds@master
         with:
           machine: github.com
           login: x-oauth-basic
-          password: ${{ secrets.token }} // this is used to allow checkout to pull private repos
+          password: ${{ secrets.GH_TOKEN }} // this is used to allow checkout to pull private repos
 
       - name: Google auth
         id: auth
