--- a/.github/workflows/sql-proxy.yml
+++ b/.github/workflows/sql-proxy.yml
@@ -24,7 +24,7 @@ jobs:
           token_format: "access_token"
           access_token_lifetime: "120s"
           create_credentials_file: true
-          credentials_json: "${{ secrets.GCP_CREDENTIALS_JSON }}"
+          credentials_json: "${{ secrets.GCLOUD_SERVICE_KEY }}"
           service_account: "${{ secrets.GCP_SERVICE_ACCOUNT }}"
 
       - name: Google Cloud SQL Proxy
